# brainstorm

./: .prd  .pre-commit-config.yaml  AGENTS.md  EEG_GRUNET.md  EEG_NET_PAPER.md  EEG_TCN_MODEL.md  Makefile  README.md  channels_coords.npy  cnn_gru.pt  eeg_tcnet.pt  eegnet.pt  model.pt  model_metadata.json  pyproject.toml  quantize_to_300kb.py
.git-hooks/: README.md  pre-commit
.github/workflows/: validate_submission.yml
brainstorm/: __init__.py  constants.py  download.py  evaluation.py  loading.py  plotting.py  preprocessing.py  spatial.py
brainstorm/ml/: __init__.py  base.py  cnn_gru.py  eeg_tcnet.py  eeg_tcnet_spectral.py  eegnet.py  logistic_regression.py  metrics.py  mlp.py  preprocessing.py  utils.py
docs/: dataset.md  defining_a_model.md  evaluation.md  faq.md  installation.md  overview.md  submissions.md
examples/: check_mask_and_rf.py  check_stratification.py  count_params.py  diagnose_predictions.py  example_cnn_gru_evaluate_only.py  example_cnn_gru_train_and_evaluate.py  example_eeg_tcnet_train_and_evaluate.py  example_eegnet_train_and_evaluate.py  example_local_train_and_evaluate.py  example_preprocess_train_and_evaluate.py  signal_plot.py
model_1/: attempt1.py
scripts/: train_eeg_tcnet_spectral.py  validate_submission.py
tests/: test_loading.py  test_ml.py  test_spatial.py  test_submission_requirements.py
training_eval/: train_and_evaluate.py
