[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainstorm"
version = "0.1.0"
description = "Code for the Precision Brainstorm 2026 BCI Hackathon"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Brainstorm Team" }
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pydantic",
    "imageio[ffmpeg]>=2.31.0",
    "loguru>=0.7.0",
    "pyarrow>=17.0.0",
    "rich>=13.0.0",
    "ipykernel",
    "pyyaml",
    "datasets",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=4.4.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["brainstorm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
# Exclude Jupyter notebooks and other files
exclude = [
    "*.ipynb",
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Package configuration
[[tool.mypy.overrides]]
module = "brainstorm.*"
disallow_untyped_defs = true

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "scipy.*",
    "sklearn.*",
    "pandas.*",
    "matplotlib.*",
    "imageio.*",
    "loguru.*",
    "pyarrow.*",
]
ignore_missing_imports = true
